Small css fix for gap between components

--- a/ui/src/components/panic-alerts-overview/panic-alerts-overview.scss
+++ b/ui/src/components/panic-alerts-overview/panic-alerts-overview.scss
@@ -2,7 +2,7 @@
     &__title {
         text-align: center;
         font-size: 25px;
-        margin: 10px 0px 20px;
+        margin: 30px 0px 20px;
     }
 
     &__data-table-container {
